--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -54,13 +54,11 @@
                 <TextBlock x:Name="SelectedPokemonCP" Foreground="#FFFFFF" Text="8888" FontSize="22" VerticalAlignment="Bottom"/>
             </DockPanel>
             <Canvas HorizontalAlignment="Center" Width="220" Height="115" VerticalAlignment="Top" Margin="0,-100,0,0">
-                <Image Source="Images/manage/arch.png" Width="207" Canvas.Left="5"/>
-                <Ellipse Width="10" Height="10" Fill="White" RenderTransformOrigin="11.191,0.211" Canvas.Top="211" Canvas.Left="1">
+                <Image Source="Images/manage/arch.png" Width="210" Canvas.Left="8"/>
+                <Ellipse Width="10" Height="10" Fill="White" RenderTransformOrigin="11.191,0.211" Canvas.Top="215" Canvas.Left="1">
                     <Ellipse.RenderTransform>
                         <TransformGroup>
-                            <ScaleTransform/>
-                            <SkewTransform/>
-                            <RotateTransform Angle="0"/>
+                            <RotateTransform x:Name="SelectedPokemonCPPrecentage" Angle="0"/>
                             <TranslateTransform Y="-110"/>
                         </TransformGroup>
                     </Ellipse.RenderTransform>
@@ -119,7 +117,7 @@
         <TextBlock x:Name="evolveCost" Foreground="#45686e" HorizontalAlignment="Center" Margin="340,298,368,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
         <TextBlock x:Name="SellValue" Foreground="#45686e" HorizontalAlignment="Center" Margin="677,296,29,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
         <TextBlock x:Name="welcomeText" Foreground="white" HorizontalAlignment="Center" Margin="279,8,307,0" TextWrapping="Wrap" Text="WELCOME," VerticalAlignment="Top" Height="30" FontSize="16" Width="214"/>
-        <Grid x:Name="RenamePrompt" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="Visible" Width="353">
+        <Grid x:Name="RenamePrompt" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="Collapsed" Width="353">
             <Rectangle RadiusY="10" RadiusX="10">
                 <Rectangle.Fill>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="1,1.5">
